--- a/Contracts/RF0_1_Signals.cfg
+++ b/Contracts/RF0_1_Signals.cfg
@@ -10,7 +10,7 @@ CONTRACT_TYPE
 completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have revealed something unexpected. Our analysis team has detected distinct patterns in the background electromagnetic field that don't match any known natural phenomenon in the Kerbin system.\n\nThese readings appear to vary in intensity depending on our orbital position, suggesting they might originate from beyond our immediate vicinity. The Science Council has authorized an immediate follow-up mission to investigate these anomalous readings in deep space, away from Kerbin's magnetic influence.
 
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements
@@ -104,8 +104,8 @@ completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have
             name = LowOrbitDeployment
             type = VesselParameterGroup
             title = Low Kerbin Orbit Deployment
-            vessel = Magnetometer Probe
-            hideChildren = true
+            //vessel = Magnetometer Probe
+            
             
             PARAMETER
             {
@@ -126,8 +126,8 @@ completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have
             name = InitialTesting
             type = VesselParameterGroup
             title = Initial Magnetometer Testing
-            vessel = Magnetometer Probe
-            hideChildren = true
+            //vessel = Magnetometer Probe
+            
             
             PARAMETER
             {
@@ -149,8 +149,8 @@ completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have
             name = HighOrbitTransfer
             type = VesselParameterGroup
             title = High Kerbin Orbit Transfer
-            vessel = Magnetometer Probe
-            hideChildren = true
+            //vessel = Magnetometer Probe
+            
             notes = Low Orbit Test Completed... Incoming Message...\n\n\nURGENT PRIORITY\n\nThe initial Magnetometer readings have revealed something unexpected. Our analysis team has detected distinct patterns in the background electromagnetic field that don't match any known natural phenomenon in the Kerbin system.\n\nThese readings appear to vary in intensity depending on our orbital position, suggesting they might originate from beyond our immediate vicinity.\n\n The Science Council has authorized an immediate follow-up mission to investigate these anomalous readings in high orbit, further away from Kerbin's magnetic influence.
             
             PARAMETER
@@ -172,8 +172,8 @@ completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have
             name = ExtendedRangeTesting
             type = VesselParameterGroup
             title = Extended Range Testing
-            vessel = Magnetometer Probe
-            hideChildren = true
+            //vessel = Magnetometer Probe
+            
             
             PARAMETER
             {
