--- a/Contracts/RF0_2_Signals.cfg
+++ b/Contracts/RF0_2_Signals.cfg
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = URGENT PRIORITY\n\nThe deep space Magnetometer readings have revealed something remarkable. Our analysis team has detected a distinct pattern of electromagnetic variations originating from the direction of the Duna system.\n\nThese patterns do not match any known natural phenomenon and appear to vary in intensity in ways that suggest they may be linked to some unknown property of Duna's composition.\n\nThe Science Council has upgraded this finding to priority level ALPHA and is now evaluating proposals for a dedicated mission to investigate the source of these unusual readings.
 
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements
