--- a/Contracts/RF1_1a_DunaOrbitalOps.cfg
+++ b/Contracts/RF1_1a_DunaOrbitalOps.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_1a_DunaOrbitalOps
     title = RF1.1a: "Duna Orbital Operations"
     
-    description = Mission Computer Terminal:\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Orbital Science Station Deployment\n\nThe fleet operations window is now open. All pathfinder technologies have been validated, and we are cleared for deployment operations.\n\nYour primary objective is to deploy the orbital science station to Duna using the proven orbital platform technology validated in RFP1.1d. This station will serve as the cornerstone of our Duna system operations, providing science processing capabilities, crew support, and docking infrastructure for all future missions.\n\nThe modular design has been thoroughly tested in Kerbin orbit. Deploy the validated configuration to establish our permanent research presence in the Duna system.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Duna Operations Team\nSUBJECT: Duna Orbital Science Station Deployment\n\nThe fleet operations window is now open. All pathfinder technologies have been validated, and we are cleared for deployment operations.\n\nYour primary objective is to deploy the orbital science station to Duna using the proven orbital platform technology validated in RFP1.1d. This station will serve as the cornerstone of our Duna system operations, providing science processing capabilities, crew support, and docking infrastructure for all future missions.\n\nThe modular design has been thoroughly tested in Kerbin orbit. Deploy the validated configuration to establish our permanent research presence in the Duna system.
     
     notes = Deployment Requirements:\n\nOrbital Platform Deployment\nDeploy the proven orbital platform technology (RFP1.1d) to establish primary research facility in Duna orbit.\n\nScience Processing Capability\nDemonstrate science lab operations and data processing to validate research infrastructure.\n\nDocking Infrastructure\nCreate docking capabilities for future operations including crew rotation and supply missions.\n\nCommunications Integration\nEstablish communications compatibility with the system-wide network being deployed in parallel missions.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Duna orbital operations successfully established! The science station is operational and ready to support sustained research activities. Docking infrastructure ready for future missions.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements - transfer window timing
