--- a/Contracts/RF1_1b_DunaCommsNetwork.cfg
+++ b/Contracts/RF1_1b_DunaCommsNetwork.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_1b_DunaCommsNetwork
     title = RF1.1b: "Duna Communications Network"
     
-    description = Mission Computer Terminal:\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna System Communications Infrastructure\n\nThe fleet operations window is now open. Your objective is to establish the communications network in the Duna system using the proven relay constellation technology validated in RFP1.1a.\n\nThis network will provide continuous coverage throughout the Duna system, enabling coordination between all deployed assets and maintaining reliable contact with Kerbin. The constellation must integrate with the existing heliocentric communications infrastructure and provide redundant coverage for mission-critical operations.\n\nDeploy the validated communications hub configuration to create comprehensive system-wide coverage that will support all future Duna operations. This constellation consists of a central communications hub and two relay satellites positioned in polar and equatorial orbits to ensure complete system coverage.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Division\nTO: Duna Operations Team\nSUBJECT: Duna System Communications Infrastructure\n\nThe fleet operations window is now open. Your objective is to establish the communications network in the Duna system using the proven relay constellation technology validated in RFP1.1a.\n\nThis network will provide continuous coverage throughout the Duna system, enabling coordination between all deployed assets and maintaining reliable contact with Kerbin. The constellation must integrate with the existing heliocentric communications infrastructure and provide redundant coverage for mission-critical operations.\n\nDeploy the validated communications hub configuration to create comprehensive system-wide coverage that will support all future Duna operations. This constellation consists of a central communications hub and two relay satellites positioned in polar and equatorial orbits to ensure complete system coverage.
     
     notes = Deployment Requirements:\n\nRelay Constellation Deployment\nDeploy the proven communications constellation technology (RFP1.1a) to provide continuous Duna system coverage.\n\nHeliocentric Integration\nIntegrate with existing heliocentric communications infrastructure for interplanetary transmission.\n\nHigh-Gain Antenna Systems\nImplement high-gain antenna systems for reliable long-range transmission to Kerbin and system-wide coverage.\n\nRedundant Coverage\nEstablish redundant communication pathways to ensure mission-critical reliability for ongoing operations.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Duna communications network successfully established! Continuous system coverage operational with reliable Kerbin connectivity. All future missions can depend on this communications infrastructure.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements - transfer window timing
