--- a/Contracts/RF1_1c_DunaSurfaceSurvey.cfg
+++ b/Contracts/RF1_1c_DunaSurfaceSurvey.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_1c_DunaSurfaceSurvey
     title = RF1.1c: "Duna Surface Survey"
     
-    description = Mission Computer Terminal:\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Surface Operations Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Surface Probe Network Deployment\n\nThe fleet operations window is now open. Your objective is to deploy surface probes across Duna using the proven precision landing technology validated in RFP1.1b.\n\nThese probes will establish our initial surface presence and conduct comprehensive scientific surveys across multiple biomes. The precision landing technology has been thoroughly tested, enabling accurate deployment to regions of scientific interest.\n\nDeploy three surface probes to specific target biomes: the Lowlands, Highlands, and Polar regions, establish surface science operations, and create reliable surface-to-orbit communication links that integrate with the communications network being deployed in parallel missions.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Surface Operations Division\nTO: Duna Operations Team\nSUBJECT: Duna Surface Probe Network Deployment\n\nThe fleet operations window is now open. Your objective is to deploy surface probes across Duna using the proven precision landing technology validated in RFP1.1b.\n\nThese probes will establish our initial surface presence and conduct comprehensive scientific surveys across multiple biomes. The precision landing technology has been thoroughly tested, enabling accurate deployment to regions of scientific interest.\n\nDeploy three surface probes to specific target biomes: the Lowlands, Highlands, and Polar regions, establish surface science operations, and create reliable surface-to-orbit communication links that integrate with the communications network being deployed in parallel missions.
 
     notes = Deployment Requirements:\n\nPrecision Landing Operations\nDeploy proven precision landing technology (RFP1.1b) to land probes in different biomes across Duna.\n\nSurface Science Operations\nEstablish surface science capability and data collection across diverse terrain types and environmental conditions.\n\nSurface-to-Orbit Communications\nCreate reliable communication links between surface assets and orbital infrastructure.\n\nMulti-Biome Coverage\nDeploy to minimum three different biomes to maximize scientific return and validate landing technology diversity.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Duna surface survey successfully completed! Multiple surface probes operational across different biomes with reliable communications. Surface science operations established and ready for expanded exploration.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements - transfer window timing
