--- a/Contracts/RF1_2a_DunaDrillingOps.cfg
+++ b/Contracts/RF1_2a_DunaDrillingOps.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_2a_DunaDrillingOps
     title = RF1.2a: "Deep Drilling Operations"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Subsurface Sample Collection\n\nThe surface probe network has identified high-priority drilling sites with the strongest anomalous readings. The transfer window is open for RF1.2 deployment operations using validated pathfinder technology.\n\nDeploy the proven deep drilling technology (RFP1.2a) to collect subsurface samples from the Midland Sea region. The mobile drilling rover will conduct extended drilling operations to reach the 35-50 meter depth where the anomalous material is concentrated.\n\nCoordinate with existing surface probe network for optimal landing site selection and establish drilling operations using the validated mobile drilling systems.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Duna Operations Team\nSUBJECT: Duna Subsurface Sample Collection\n\nThe surface probe network has identified high-priority drilling sites with the strongest anomalous readings. The transfer window is open for RF1.2 deployment operations using validated pathfinder technology.\n\nDeploy the proven deep drilling technology (RFP1.2a) to collect subsurface samples from the Midland Sea region. The mobile drilling rover will conduct extended drilling operations to reach the 35-50 meter depth where the anomalous material is concentrated.\n\nCoordinate with existing surface probe network for optimal landing site selection and establish drilling operations using the validated mobile drilling systems.
     
     notes = Deployment Requirements:\n\nMobile Drilling Deployment\nDeploy proven drilling technology (RFP1.2a) to Duna surface for subsurface sample collection.\n\nSubsurface Sample Collection\nConduct drilling operations to 35m+ depth to collect anomalous material samples.\n\nSurface Operations Integration\nCoordinate with existing surface probe network for optimal site selection and operations support.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Drilling operations successful! Subsurface samples collected from target depth. Mobile drilling systems operational and ready for sample return operations.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Transfer window timing
