--- a/Contracts/RF1_2b_DunaSampleReturn.cfg
+++ b/Contracts/RF1_2b_DunaSampleReturn.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_2b_DunaSampleReturn
     title = RF1.2b: "Sample Return Mission"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Sample Return to Orbital Laboratory\n\nThe drilling rover has successfully collected subsurface samples from the target depth. These samples must now be returned to the Duna orbital science station for comprehensive analysis using the proven sample return technology (RFP1.2b).\n\nExecute surface-to-orbit sample return operations and deliver the precious subsurface material to the orbital laboratory. The samples will undergo detailed analysis to determine the composition and properties of the anomalous material.\n\nCoordinate with the existing orbital science station to ensure proper sample handling and analysis capabilities.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Duna Operations Team\nSUBJECT: Duna Sample Return to Orbital Laboratory\n\nThe drilling rover has successfully collected subsurface samples from the target depth. These samples must now be returned to the Duna orbital science station for comprehensive analysis using the proven sample return technology (RFP1.2b).\n\nExecute surface-to-orbit sample return operations and deliver the precious subsurface material to the orbital laboratory. The samples will undergo detailed analysis to determine the composition and properties of the anomalous material.\n\nCoordinate with the existing orbital science station to ensure proper sample handling and analysis capabilities.
     
     notes = Deployment Requirements:\n\nSample Return Operations\nExecute proven sample return technology (RFP1.2b) from Duna surface to orbital science station.\n\nOrbital Laboratory Delivery\nDeliver subsurface samples to existing Duna science station for comprehensive analysis.\n\nSample Analysis\nProcess samples in orbital laboratory to determine material composition and properties.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Sample return mission accomplished! Subsurface samples successfully delivered to orbital laboratory. Analysis reveals unique material properties warranting expanded research operations.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Transfer window timing
