--- a/Contracts/RF1_3a_IkePermanentHabitat.cfg
+++ b/Contracts/RF1_3a_IkePermanentHabitat.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_3a_IkePermanentHabitat
     title = RF1.3a: "Ike Permanent Habitat"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Ike Research Base Establishment\n\nThe sample analysis from RF1.2 has revealed material properties requiring extended research that cannot be conducted through temporary facilities. We are authorized to establish a permanent research presence on Ike using the validated habitat technology from RFP1.3a.\n\nDeploy the proven nuclear transfer stage technology to transport and establish permanent habitat modules on Ike's surface. The research base will integrate with the existing resource facility to create a comprehensive operational center supporting extended crew deployments.\n\nThis permanent facility will serve as the foundation for sustained research operations and crew presence in the Duna system.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Duna Operations Team\nSUBJECT: Ike Research Base Establishment\n\nThe sample analysis from RF1.2 has revealed material properties requiring extended research that cannot be conducted through temporary facilities. We are authorized to establish a permanent research presence on Ike using the validated habitat technology from RFP1.3a.\n\nDeploy the proven nuclear transfer stage technology to transport and establish permanent habitat modules on Ike's surface. The research base will integrate with the existing resource facility to create a comprehensive operational center supporting extended crew deployments.\n\nThis permanent facility will serve as the foundation for sustained research operations and crew presence in the Duna system.
     
     notes = Deployment Requirements:\n\nNuclear Stage Cargo Transport\nDeploy proven nuclear transfer stage (RFP1.3d) to transport habitat modules to Ike surface.\n\nPermanent Habitat Establishment\nEstablish permanent research base using validated habitat technology (RFP1.3a) integrated with existing resource facility.\n\nExtended Crew Support\nCreate facilities capable of supporting extended crew deployments for sustained research operations.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Ike permanent habitat successfully established! Research base operational with nuclear stage transport capability. Extended crew deployment infrastructure ready for sustained operations.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Transfer window timing
