--- a/Contracts/RF1_3b_IkeSurfaceOps.cfg
+++ b/Contracts/RF1_3b_IkeSurfaceOps.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_3b_IkeSurfaceOps
     title = RF1.3b: "Ike Surface Operations"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Surface Operations Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Advanced Surface Exploration Systems\n\nWith the permanent research base now operational on Ike, we require enhanced surface exploration capabilities to conduct comprehensive surveys around the facility. The advanced rover technology validated in RFP1.3b will enable extended-range exploration operations.\n\nDeploy the proven nuclear transfer stage to transport next-generation rover systems to Ike. These advanced rovers will establish coordinated surface operations with the research base, significantly expanding our exploration capabilities across Ike's surface.\n\nThe rover systems will provide mobile research platforms capable of extended operations while maintaining contact with the permanent base.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Surface Operations Division\nTO: Duna Operations Team\nSUBJECT: Advanced Surface Exploration Systems\n\nWith the permanent research base now operational on Ike, we require enhanced surface exploration capabilities to conduct comprehensive surveys around the facility. The advanced rover technology validated in RFP1.3b will enable extended-range exploration operations.\n\nDeploy the proven nuclear transfer stage to transport next-generation rover systems to Ike. These advanced rovers will establish coordinated surface operations with the research base, significantly expanding our exploration capabilities across Ike's surface.\n\nThe rover systems will provide mobile research platforms capable of extended operations while maintaining contact with the permanent base.
     
     notes = Deployment Requirements:\n\nNuclear Stage Transport\nDeploy nuclear transfer stage to transport advanced rover systems to Ike surface.\n\nAdvanced Surface Mobility\nEstablish next-generation rover operations using validated technology (RFP1.3b) around the research base.\n\nCoordinated Operations\nDemonstrate coordinated operations between rover systems and permanent base crew for integrated surface exploration.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Ike surface operations successfully established! Advanced rover systems operational with coordinated base support. Enhanced surface exploration capabilities now available for comprehensive Ike research.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Transfer window timing
