--- a/Contracts/RF1_4b_InfrastructureRepurposing.cfg
+++ b/Contracts/RF1_4b_InfrastructureRepurposing.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_4b_InfrastructureRepurposing
     title = RF1.4b: "Infrastructure Repurposing"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Infrastructure Management Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Orbital Infrastructure Lifecycle Management\n\nAs our presence in the Duna system matures, we must transition from deployment operations to sustainable infrastructure management. Some of our earlier transfer assets have completed their primary missions and require repurposing to maximize operational efficiency.\n\nRather than abandoning aging infrastructure, we will demonstrate advanced lifecycle management by repurposing existing transfer stages as permanent orbital assets. This approach maximizes our investment while enhancing system-wide operational capacity.\n\nYour objective is to repurpose aging transfer infrastructure as bulk fuel storage, integrate it with Ike ISRU operations, and demonstrate sustainable infrastructure management protocols.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Infrastructure Management Division\nTO: Duna Operations Team\nSUBJECT: Orbital Infrastructure Lifecycle Management\n\nAs our presence in the Duna system matures, we must transition from deployment operations to sustainable infrastructure management. Some of our earlier transfer assets have completed their primary missions and require repurposing to maximize operational efficiency.\n\nRather than abandoning aging infrastructure, we will demonstrate advanced lifecycle management by repurposing existing transfer stages as permanent orbital assets. This approach maximizes our investment while enhancing system-wide operational capacity.\n\nYour objective is to repurpose aging transfer infrastructure as bulk fuel storage, integrate it with Ike ISRU operations, and demonstrate sustainable infrastructure management protocols.
     
     notes = Deployment Requirements:\n\nInfrastructure Lifecycle Management\nRepurpose aging transfer stages as permanent orbital infrastructure to maximize operational lifespan.\n\nISRU Integration Enhancement\nIntegrate repurposed infrastructure with existing Ike resource operations to enhance production capacity.\n\nSustainable Operations\nDemonstrate orbital infrastructure sustainability and resource optimization protocols.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Infrastructure repurposing successful! Aging transfer assets converted to permanent orbital storage. Enhanced ISRU integration operational. Sustainable infrastructure management protocols established.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Transfer window timing
