--- a/Contracts/RF1_1d_IkeResourceOps.cfg
+++ b/Contracts/RF1_1d_IkeResourceOps.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_1d_IkeResourceOps
     title = RF1.1d: "Ike Resource Operations"
     
-    description = Mission Computer Terminal:\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Ike Resource Extraction Facility Deployment\n\nThe fleet operations window is now open. Your objective is to establish resource extraction operations on Ike using the proven ISRU technology validated in RFP1.1e on Minmus.\n\nThis facility will provide fuel production capability to support sustained operations throughout the Duna system, reducing dependency on supply missions from Kerbin. The ISRU technology has been thoroughly tested and proven capable of reliable autonomous operation.\n\nThis mission will demonstrate the complete ISRU operational cycle: surface extraction, fuel production, and orbital transfer capability through docking operations that validate the logistics chain essential for sustained Duna system operations.\n\nDeploy the validated resource extraction configuration to establish our first interplanetary fuel production facility, creating the foundation for truly sustainable operations beyond Kerbin's sphere of influence.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Duna Operations Team\nSUBJECT: Ike Resource Extraction Facility Deployment\n\nThe fleet operations window is now open. Your objective is to establish resource extraction operations on Ike using the proven ISRU technology validated in RFP1.1e on Minmus.\n\nThis facility will provide fuel production capability to support sustained operations throughout the Duna system, reducing dependency on supply missions from Kerbin. The ISRU technology has been thoroughly tested and proven capable of reliable autonomous operation.\n\nThis mission will demonstrate the complete ISRU operational cycle: surface extraction, fuel production, and orbital transfer capability through docking operations that validate the logistics chain essential for sustained Duna system operations.\n\nDeploy the validated resource extraction configuration to establish our first interplanetary fuel production facility, creating the foundation for truly sustainable operations beyond Kerbin's sphere of influence.
     
     notes = Deployment Requirements:\n\nISRU Systems Deployment\nDeploy proven ISRU technology (RFP1.1e) to Ike surface for ore extraction and fuel production capability.\n\nFuel Production Operations\nDemonstrate ore extraction and fuel production using validated systems and procedures.\n\nResource Storage Infrastructure\nCreate storage and distribution infrastructure for processed materials and produced fuel.\n\nAutonomous Operations\nEstablish autonomous operation capability essential for sustained interplanetary presence.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Ike resource operations successfully established! ISRU facility operational with proven fuel production capability. Sustainable operations foundation created for long-term Duna system presence.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements - transfer window timing
