--- a/Contracts/RF1_2c_IkeEnhancedISRU.cfg
+++ b/Contracts/RF1_2c_IkeEnhancedISRU.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_2c_IkeEnhancedISRU
     title = RF1.2c: "Enhanced Resource Operations"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Ike Resource Facility Enhancement\n\nThe expanded RF1.2 operations require enhanced fuel production capability beyond our current Ike facility capacity. The drilling and sample return missions significantly increase fuel demands throughout the Duna system.\n\nDeploy the proven advanced ISRU technology (RFP1.2c) to enhance the existing Ike resource facility. This upgrade will provide the increased production capacity and multiple fuel types needed to support sustained sample return operations and expanded exploration activities.\n\nUpgrade the existing facility with advanced processing systems while maintaining continuous operations to support ongoing missions.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Duna Operations Team\nSUBJECT: Ike Resource Facility Enhancement\n\nThe expanded RF1.2 operations require enhanced fuel production capability beyond our current Ike facility capacity. The drilling and sample return missions significantly increase fuel demands throughout the Duna system.\n\nDeploy the proven advanced ISRU technology (RFP1.2c) to enhance the existing Ike resource facility. This upgrade will provide the increased production capacity and multiple fuel types needed to support sustained sample return operations and expanded exploration activities.\n\nUpgrade the existing facility with advanced processing systems while maintaining continuous operations to support ongoing missions.
     
     notes = Deployment Requirements:\n\nAdvanced ISRU Enhancement\nDeploy proven advanced ISRU technology (RFP1.2c) to upgrade existing Ike resource facility.\n\nIncreased Production Capacity\nEnhance facility with higher throughput systems to support expanded operations.\n\nMultiple Fuel Types\nImplement production capability for various propellant types required by diverse mission profiles.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Enhanced resource operations established! Ike facility upgraded with advanced processing systems. Increased production capacity operational and supporting expanded Duna system activities.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Transfer window timing
