--- a/Contracts/RF1_4c_DunaSurfaceBase.cfg
+++ b/Contracts/RF1_4c_DunaSurfaceBase.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RF1_4c_DunaSurfaceBase
     title = RF1.4c: "Duna Surface Base Deployment"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Permanent Duna Surface Presence\n\nWith comprehensive infrastructure now established throughout the Duna system, the time has come to establish our permanent presence on Duna's surface. This represents the culmination of Operation Red Frontier Phase 1 - the transformation from initial exploration to sustained presence.\n\nUtilize the proven superheavy launch capability and precision atmospheric entry technology to deploy large base modules directly to Duna's surface. The Kerbin Gateway Station will serve as the staging point for this historic mission, demonstrating the full integration of our advanced logistics capabilities.\n\nThis permanent surface base will serve as the foundation for Phase 2 operations and represents kerbanity's first permanent foothold on another planet.
+    description = Mission Computer Terminal: WARNING Access to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Duna Operations Team\nSUBJECT: Permanent Duna Surface Presence\n\nWith comprehensive infrastructure now established throughout the Duna system, the time has come to establish our permanent presence on Duna's surface. This represents the culmination of Operation Red Frontier Phase 1 - the transformation from initial exploration to sustained presence.\n\nUtilize the proven superheavy launch capability and precision atmospheric entry technology to deploy large base modules directly to Duna's surface. The Kerbin Gateway Station will serve as the staging point for this historic mission, demonstrating the full integration of our advanced logistics capabilities.\n\nThis permanent surface base will serve as the foundation for Phase 2 operations and represents kerbanity's first permanent foothold on another planet.
     
     notes = Deployment Requirements:\n\nSuperheavy Launch Operations\nUtilize proven superheavy launch capability (RFP1.4c) to deploy large base modules via Gateway Station staging.\n\nPrecision Surface Deployment\nImplement validated precision atmospheric entry technology (RFP1.4b) for direct surface base module delivery.\n\nGateway Integration\nDemonstrate complete integration with Gateway Station logistics for comprehensive interplanetary operations.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Historic achievement! Permanent Duna surface base successfully established. Phase 1 of Operation Red Frontier complete. Kerbanity now maintains permanent presence throughout the Duna system. Phase 2 operations authorized.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Transfer window timing
